--- a/main.html
+++ b/main.html
@@ -6,8 +6,20 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color:yellow; text-align:center;">
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers Photos</h1>
+		<p>information about the flower</p>
+	</div>
+
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p> information about the flower</p>		
+	</div>
+	
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
