--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body style="background-color:yellow; text-align:center;">
 	<!-- the entire body must be written by student -->
 	<div>
-		<h1 id="f1">Flowers Photos</h1>
+		<h1 id="f1">Flowers photos</h1>
 		<p>information about the flower</p>
 	</div>
 
